src/layouts/all.scss
@import url('https://fonts.googleapis.com/css?family=Quattrocento+Sans:400,700');

html {
  overflow-x:hidden;
}

body {
  font-family: 'Quattrocento Sans', sans-serif;
  margin:0;
  padding:0;
  font-weight:400;
color: #000;
    -webkit-text-size-adjust: 100%;
    -webkit-font-feature-settings: "kern" 1;
    -moz-font-feature-settings: "kern" 1;
    -o-font-feature-settings: "kern" 1;
    font-feature-settings: "kern" 1;
    font-kerning: normal;
    line-height: 1.5;
    font-size: 1em;
}

a {
  color:#333;
  text-decoration:none;
}

ul{
  padding:0;
}

.section {
  margin-top:2em;
}

.section-home {
  margin-top:4em;

     @media screen and (max-width: 900px) {
  margin-top:2em;

   
}

}

.container {
    margin: 0 auto;
width: 90%;
max-width:66em;
display: grid;
margin: 0 auto;
grid-column-gap: 2rem;
grid-row-gap: 2rem;
grid-template-columns: 1fr;

&.page {
  h2 {
      max-width: 700px;
    grid-column: 1/-1;
    font-size: 1.6em;
    font-weight: 300;
    @media screen and (max-width: 900px) {
max-width:100%;
   
}
}
}

&.two {
grid-template-columns: 1fr 1fr;

@media screen and (max-width: 900px) {
grid-template-columns: 1fr ;
   
}

h2 {
      max-width: 700px;
    grid-column: 1/-1;
    font-size: 1.6em;
    font-weight: 300;
    @media screen and (max-width: 900px) {
max-width:100%;
   
}

}


  
}
}



.navbar .container {
grid-template-columns: 2fr 1fr;

.navbar-brand .navbar-item figure{
  margin:1em 0;
}
  .navbar-start {
  justify-self:end;
  margin:1em 0;
  
  a {
  margin:10px;






  }
  }
}

img {
  max-width:100%;
}



.content .taglist {
   list-style: none;
  margin-bottom: 0;
  display:grid;
  grid-template-columns: auto auto auto auto;


  li {
margin: 1em 0;

a {
  border: 1px solid #eee;
padding: 8px 15px;
}

  }

}

.tags {

ul {

  list-style:none;
  width:100%;
  margin-left:0;
}
}
 
.project-links {
  display:inline-block;

  li {
  display:inline-block;
  padding:4px 14px;
  border: 1px solid;
  margin-right:1em;
  img {
  max-width:14px;
  }
  }
}  

.project-content {
  
  h2 {
  margin:0;
  }
}

.project-content--items {
  display:grid;
  grid-template-columns: 1fr 1fr;
  grid-column-gap:2em;
  @media screen and (max-width: 800px) {
grid-template-columns:1fr ;
grid-row-gap:2em;
}
}

.about-content {
  li {
  margin-left: 15px;
      list-style-type: circle;
  }
}

.about-section {
  display:grid;
  grid-template-columns:1fr 2fr;
   @media screen and (max-width: 600px) {
grid-template-columns:1fr ;
}

  img {
  max-width: 170px;
border-radius: 50%;
 @media screen and (max-width: 700px) {
max-width:100%;
   border-radius:0;
}
  }
}


.blog-content {
      background: #fff;
    border-radius: 4px;
    border: 1px solid rgb(234, 236, 238);
    box-shadow: 0 2px 8px rgba(25, 17, 34, 0.05);
    padding-left: 3.15rem;
    padding-right: 3.15rem;
    
    transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1),transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), padding 250ms cubic-bezier(0.4, 0, 0.2, 1);
    -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1),transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), padding 250ms cubic-bezier(0.4, 0, 0.2, 1);
    -moz-transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), padding 250ms cubic-bezier(0.4, 0, 0.2, 1);

    .button.is-small {
    margin-bottom:2em;
    display:block;
    }

     @media screen and (max-width: 700px) {
 padding: 0 5px;
    border: none;
    box-shadow: none;

}



    &:hover {
transform:translateY(-4px);box-shadow:0 10px 42px rgba(25, 17, 34, 0.1);-webkit-transform:translateY(-4px);
    }
}

.index-content {
  display:grid;
  grid-template-columns: 2fr 1fr;
  grid-column-gap: 2rem;
  margin-bottom:2em;

h3 {
  margin:0;
}

p {
  margin:0;
}
}

.post-content--title {
  display:grid;
  grid-template-columns: 1fr 1fr;
  grid-column-gap: 2rem;
  margin-bottom:2em;

h2 {
  margin:0;
}

p {
  margin:0;
}

}

.blog-container {
  max-width:700px;
  margin: 0 ;
  padding: 0 ;

  svg {
  max-width:450px;
  margin: 1em 0;
}

 ul {

 li {
 margin:1em 0;
 }
 }
}

.blog-container--title {
  padding:0;
  margin:0;
  }



.content-post--project {
  display: grid;
grid-template-columns: 1fr 2fr;
grid-column-gap: 2em;
padding:2em;
border: 1px solid #eaecee;

 @media screen and (max-width: 900px) {
grid-template-columns: 1fr ;
padding: 0 5px;
border: none;

}
.content-post--project--title--links {
  

    display: grid;
grid-template-columns: 1fr 1fr;
grid-column-gap: 2em;
   margin-bottom: 2em;

    @media screen and (max-width: 900px) {
grid-template-columns: 1fr ;
   
}

    h3 {
  margin:0;  
      @media screen and (max-width: 900px) {
margin:1em 0;
   
}
} 

p {
margin:0;
  }
}
   
}

footer {
  margin: 4em 0 1em;

  .footer-start {
  display: grid;
  grid-template-columns: 1fr 2fr;

    ul.social {
    margin:0;
    display:grid;
    grid-template-columns: 70px 70px 70px;
    list-style:none;
    justify-content:right;
    text-align:right;
    a {
    font-size:.9em;
    }
    }
  }
}


.loader{
  background-color:#fff;
  position:fixed;
  color:black;
  top:0;
  left:0;
  right:0;
  bottom:0;
  opacity:0;
  transform:translateY(-100%);
  transition:300ms ease;
  animation-name: loader;
  animation-duration: 1s;
  animation-timing-function: cubic-bezier(0.64, 0.05, 0.1, 1.01);
}
.loader div {
  position:absolute;
  top:50%;
  left:50%;
  transform:translate(-50%,-50%);
}
@keyframes loader {
  0% {
    opacity:1;
    transform:translateY(0%);
  }
  75% {
    opacity:1;
    transform:translateY(0%);
  }
  100% {
    opacity:1;
    transform:translateY(-100%);
  }
}

/* Make clicks pass-through */
#nprogress {
  pointer-events: none;
}

#nprogress .bar {
  background: #29d;

  position: fixed;
  z-index: 1031;
  top: 0;
  left: 0;

  width: 100%;
  height: 2px;
}

/* Fancy blur effect */
#nprogress .peg {
  display: block;
  position: absolute;
  right: 0px;
  width: 100px;
  height: 100%;
  box-shadow: 0 0 10px #29d, 0 0 5px #29d;
  opacity: 1.0;

  -webkit-transform: rotate(3deg) translate(0px, -4px);
      -ms-transform: rotate(3deg) translate(0px, -4px);
          transform: rotate(3deg) translate(0px, -4px);
}


.nprogress-custom-parent {
  overflow: hidden;
  position: relative;
}

.nprogress-custom-parent #nprogress .spinner,
.nprogress-custom-parent #nprogress .bar {
  position: absolute;
}

@-webkit-keyframes nprogress-spinner {
  0%   { -webkit-transform: rotate(0deg); }
  100% { -webkit-transform: rotate(360deg); }
}
@keyframes nprogress-spinner {
  0%   { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

